[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/logo.png" type="Texture" id=1]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Sounds/SFX/hover.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/SFX/click.wav" type="AudioStream" id=4]

[node name="MainMenu" type="Node"]
script = ExtResource( 2 )

[node name="logo" type="Sprite" parent="."]
position = Vector2( 52.2358, 44.238 )
scale = Vector2( 0.0932921, 0.0932921 )
texture = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.585213
margin_top = -1.03856
margin_right = -0.585205
margin_bottom = -1.03856
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="UI"]
margin_left = 107.032
margin_top = 26.5144
margin_right = 330.031
margin_bottom = 284.514
rect_scale = Vector2( 0.155, 0.155 )
custom_constants/separation = 39
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="StarGameButton" type="LinkButton" parent="UI/MenuContainer"]
margin_right = 222.0
margin_bottom = 18.0
text = "START GAME"
underline = 1

[node name="HowToPlayButton" type="LinkButton" parent="UI/MenuContainer"]
margin_top = 57.0
margin_right = 222.0
margin_bottom = 75.0
text = "HOW TO PLAY"
underline = 1

[node name="CreditsButton" type="LinkButton" parent="UI/MenuContainer"]
margin_top = 114.0
margin_right = 222.0
margin_bottom = 132.0
text = "CREDITS"
underline = 1

[node name="OptionsButton" type="LinkButton" parent="UI/MenuContainer"]
margin_top = 171.0
margin_right = 222.0
margin_bottom = 189.0
text = "OPTIONS"
underline = 1

[node name="ExitButton" type="LinkButton" parent="UI/MenuContainer"]
margin_top = 228.0
margin_right = 222.0
margin_bottom = 246.0
text = "EXIT"
underline = 1

[node name="HoverSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="ClickSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
[connection signal="mouse_entered" from="UI/MenuContainer/StarGameButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="UI/MenuContainer/StarGameButton" to="." method="_on_StarGameButton_pressed"]
[connection signal="mouse_entered" from="UI/MenuContainer/HowToPlayButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="UI/MenuContainer/HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
[connection signal="mouse_entered" from="UI/MenuContainer/CreditsButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="UI/MenuContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="mouse_entered" from="UI/MenuContainer/OptionsButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="UI/MenuContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="mouse_entered" from="UI/MenuContainer/ExitButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="UI/MenuContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
